#21 connector artefacts reorganization